- add heroku deploying support

--- a/passgen-app/passgen-web/pom.xml
+++ b/passgen-app/passgen-web/pom.xml
@@ -17,37 +17,36 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>com.passgen.WebNode</mainClass>
-                            <classpathPrefix>libs/</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.5.1</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.1.1</version>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>assemble</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>
-                                ${project.build.directory}/libs/
-                            </outputDirectory>
+                            <assembleDirectory>target</assembleDirectory>
+                            <extraJvmArguments>-Xmx128m</extraJvmArguments>
+                            <programs>
+                                <program>
+                                    <mainClass>com.passgen.web.WebNode</mainClass>
+                                    <name>passgenapp</name>
+                                </program>
+                            </programs>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>0.3.0</version>
+                <configuration>
+                    <jdkVersion>1.8</jdkVersion>
+                    <appName>passgenapp</appName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
