--- a/passgen-app/passgen-web/src/main/resources/application.conf
+++ b/passgen-app/passgen-web/src/main/resources/application.conf
@@ -1,8 +1,7 @@
 PassgenSys {
   akka {
-    loggers = ["akka.event.slf4j.Slf4jLogger"]
     loglevel = "DEBUG"
-    logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+    event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
     log-config-on-start = on
     actor {
       debug {
