--- a/cqrs-app/cqrs-frontend-web/pom.xml
+++ b/cqrs-app/cqrs-frontend-web/pom.xml
@@ -14,7 +14,6 @@
 
     <properties>
         <scalatra.version>2.2.0</scalatra.version>
-        <scala.version>2.10</scala.version>
         <jetty.version>9.0.2.v20130417</jetty.version>
     </properties>
 
@@ -37,7 +36,7 @@
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <configuration>
-                    <scalaCompatVersion>2.10</scalaCompatVersion>
+                    <scalaCompatVersion>${scala.version}</scalaCompatVersion>
                 </configuration>
                 <executions>
                     <execution>
